# monorepo

./: .env.postgres.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  RELEASE_NOTES_DRAFT.md  alembic.ini  data_sources_plan.md  docker-compose.postgres.yml  flujo-production-guide.skill  flujo.toml  main.py  plan_branch_fix.md  prd.md  prd_todo.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sitecustomize.py  test_real_apis.py
.github/: pull_request_template.md
.github/workflows/: deploy.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 0d6a0f2b5c1e_add_data_source_activation_rules.py  1fbba3a0d6d1_add_storage_tables_and_pubmed_config.py  20250211_add_discovery_search_jobs.py  20251102_add_curation_tables.py  20260123_add_extraction_queue.py  20260123_add_pub_extractions.py  20260123_fix_ingestion_job_metadata_column.py  2855ecc68ef0_add_created_at_and_updated_at_columns_.py  3677d42fb8a1_add_research_space_id_to_reviews_table.py  45aad920411e_add_space_scoped_discovery_scaffolding.py  599303884b08_add_uppercase_pubmed_to_sourcetypeenum.py  5b3fb28e5ab2_add_system_status_table.py  5f3b2d1c4e7a_add_audit_log_request_metadata.py  7c2b1df29f25_add_pubmed_source_type.py  841d4a55d87e_add_data_sources_tables.py  9c996b1f8a64_add_source_type_to_catalog_entries.py  a672f05b90d4_initial_database_schema.py  c41dc298ca65_add_data_discovery_tables.py  c58bc6f7ca55_ensure_pubmed_in_sourcetypeenum.py  d2a4f7e3c1b9_add_mechanisms_table.py  e9c9f4b2fe38_merge_pubmed_source_type.py  f251af2b636a_add_research_spaces_tables.py  fe86208f6b48_add_authentication_tables.py
data/transformed/: entity_mappings.json  genes_normalized.json  phenotypes_normalized.json  publications_normalized.json  variants_normalized.json
docs/: Auth_PRD_FSD.md  EngineeringArchitecture.md  EngineeringArchitecturePlan.md  README.md  admin_area.md  architectural-compliance-review-2024.md  architectural-safeguards-summary.md  architectural_review.md  auth-setup-guide.md  codebase-assessment-2025.md  curator.md  data_sources_management_implementation_plan.md  extraction_pipeline_plan.md  extraction_pipeline_requirements.md  extraction_pipeline_schema.md  frontend-backend-sync-analysis.md  goal.md  implementation_plan.md  infra.md  local_postgres.md  node_js_migration_prd.md  plan.md  project-status-review.md  project_status.md  security.md  system_hierarchy_overview.md  system_map.md  type_examples.md  type_examples_validation.md  type_plan.md
docs/extraction_agents/: pubmed.md
docs/flujo/: agent_architecture.md  contract_orianted_ai.md  contract_oriented_ai.md  prod_guide.md  reasoning.md
docs/frontend/: EngenieeringArchitectureNext.md  EngineeringArchitectureNext.md  design_gidelines.md  design_guidelines.md  ui-design-review.md
docs/old/: Auth_PRD_FSD.md  COMPLETE-ARCHITECTURAL-SAFEGUARDS.md  architectural-compliance-review-2024.md  architectural-growth-safeguards.md  architectural-validation.md  architectural_review.md  auth-setup-guide.md  data_sources_management_implementation_plan.md  engineering_alignment.md  ensuring-architectural-growth.md  goal.md  ingestion-curation-reliability-prd.md  performance-assessment-2024-11.md  project-status-review.md  research-spaces-api.md  runbooks.md  security.md  storage_provider_onboarding.md
docs/onboarding/: architecture-overview.md
docs/security/: HIPAA_COMPLIANCE_ASSESSMENT.md  PYTHON_DEPENDENCY_VULNERABILITIES.md  SECURITY_UPDATE_SUMMARY.md  react-security-hardening.md
docs/status/: AI_MANAGED_DATA_SOURCES_STATUS.md
docs/world_model/: TypeDb_plan.md
scripts/: check_no_any.py  enable_pubmed.py  generate_ts_types.py  init_flujo_schema.py  migrate_research_spaces.py  migrate_to_space_scoped_discovery.py  regenerate_clinvar_samples.py  reset_admin_password.py  rollback_space_scoped_discovery.py  run_visual_snapshots.sh  seed_admin_user.py  seed_database.py  validate_architecture.py  validate_dependencies.py
scripts/postgres-init/: 01-create-flujo-schema.sql
src/: dash_app.py  main.py
src/application/: __init__.py  container.py  exceptions.py
src/application/agents/: __init__.py
src/application/curation/: __init__.py  conflict_detector.py  dto.py
src/application/dto/: auth_requests.py  auth_responses.py
src/background/: __init__.py  ingestion_scheduler.py  session_cleanup.py
src/database/: __init__.py  catalog_entries_seed.json  seed.py  seed_data.py  session.py  sqlite_utils.py  url_resolver.py
src/middleware/: __init__.py  audit_logging.py  auth.py  distributed_rate_limit.py  jwt_auth.py  rate_limit.py  request_context.py
src/models/: __init__.py  gene.py  resource.py
src/repositories/: __init__.py  base.py  evidence_repository.py  gene_repository.py  phenotype_repository.py  publication_repository.py  variant_repository.py
src/routes/: __init__.py  admin.py  auth.py  curation.py  dashboard.py  data_discovery.py  evidence.py  export.py  extractions.py  genes.py  health.py  mechanisms.py  phenotypes.py  research_space_discovery.py  research_spaces.py  resources.py  root.py  search.py  serializers.py  users.py  variants.py
src/services/: __init__.py  resources.py
src/type_definitions/: __init__.py  api.py  common.py  data_sources.py  domain.py  external_apis.py  json_utils.py  packaging.py  security.py  storage.py
src/types/: __init__.py  api.py  domain.py
src/web/: Dockerfile  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  percy-snapshots.yml  tailwind.config.ts  tsconfig.json
tests/: conftest.py  test_health.py  test_resources.py
tests/e2e/: test_auth_regression.py  test_curation_detail_endpoint.py  test_curation_workflow.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: test_space_discovery_isolation.py  test_ts_generation.py
tests/performance/: test_storage_performance.py
tests/routes/: test_security_regressions.py
tests/security/: __init__.py  test_schemathesis_contracts.py
tests/test_types/: __init__.py  data_discovery_fixtures.py  fixtures.py  mocks.py
(+726 files in other folders)
