[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med13-resource-library"
version = "0.1.0"
description = "MED13 Resource Library - Curated biomedical data for research"
authors = [{name = "MED13 Foundation"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "google-cloud-secretmanager>=2.16.0",
    "google-cloud-storage>=2.10.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.17.0",
    "dash>=2.17.0",
    "dash-bootstrap-components>=1.6.0",
    "gradio>=4.44.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
    "pip-audit>=2.7.0",
    "bandit>=1.8.0",
    "safety>=3.0.0",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.6.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Stricter Any usage controls (Phase 1)
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false  # Gradual adoption for expressions

# Module-specific settings
[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "plotly.*",
    "dash.*",
    "dash_bootstrap_components.*",
    "requests.*",
    "dash_table",
    "dash_table.*",
]
ignore_missing_imports = true

# Dash UI components - exclude from strict Any checks
[[tool.mypy.overrides]]
module = [
    "src.presentation.dash.*",
    "src.dash_app",
]
disallow_any_generics = false
disallow_any_unimported = false

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    ".tox",
    "migrations",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "api: API endpoint tests",
    "database: Database tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations", ".venv"]
skips = ["B101", "B601"]  # Skip assert checks and shell usage

[tool.safety]
ignore-vulns = [
    # Add any false positives here
]
# Use the new scan command format
scan = {}
